--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
                     'viewPager'       : "androidx.viewpager:viewpager:1.0.0",
                     'annotation'      : "androidx.annotation:annotation:1.1.0",
                     'core'            : "androidx.core:core-ktx:1.2.0-alpha02",
-                    'test'            : "androidx.test:runner:1.2.0",
+                    'test'            : "androidx.test:runner:1.3.0-alpha01",
                     'legacy'          : "androidx.legacy:legacy-support-v4:1.0.0",
                     'room'            : [
                             'runtime'   : "androidx.room:room-runtime:2.1.0",
@@ -88,8 +88,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:${buildConfig.gradlePlugin}"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.1.0-alpha05"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
-        classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.31"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.40"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.40"
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'io.fabric.tools:gradle:1.29.0'
     }
