--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         targetSdkVersion buildConfig.targetSdk
 
         applicationId "com.jorkoh.transportezaragozakt"
-        versionCode 12
-        versionName "1.0.6"
+        versionCode 13
+        versionName "1.0.7-dev"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
