--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         targetSdkVersion buildConfig.targetSdk
 
         applicationId "com.jorkoh.transportezaragozakt"
-        versionCode 13
-        versionName "1.0.7"
+        versionCode 14
+        versionName "1.0.8-dev"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
