--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             android:supportsRtl="true"
             android:theme="@style/BaseTheme.Launcher"
             tools:ignore="GoogleAppIndexingWarning"
-            android:networkSecurityConfig="@xml/network_security_config">
+            android:usesCleartextTraffic="true">
         <uses-library
                 android:name="org.apache.http.legacy"
                 android:required="false"/>
