--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
         applicationId "com.jorkoh.transportezaragozakt"
         versionCode 14
-        versionName "1.0.8-dev"
+        versionName "1.0.8"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
