--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         targetSdkVersion buildConfig.targetSdk
 
         applicationId "com.jorkoh.transportezaragozakt"
-        versionCode 14
-        versionName "1.0.8"
+        versionCode 15
+        versionName "1.0.9-dev"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
